# tron

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
docker_compose/: app.yaml  make_new_migrations.yaml  postgres.yaml  roll_up_migrations.yaml  test.yaml
src/app/api/: docs.py  main.py  middlewares.py
src/app/api/wallets/: handlers.py  schemas.py
src/app/logger/: formatter.py  logger.py
src/core/: config.py
src/core/providers/: app.py  db.py  tron.py  wallets.py
src/domain/entities/: base.py  wallets.py
src/infra/db/postgres/migrations/: env.py
src/infra/db/postgres/migrations/versions/: 2025_07_28_1625-c72e847827bb_init.py
src/infra/db/postgres/models/: __init__.py  base.py  wallets.py
src/infra/db/postgres/repos/wallets/: sqlalchemy.py
src/infra/db/repos/: wallets.py
src/infra/tron/: service.py
src/logic/handlers/: commands.py  queries.py
tests/: conftest.py
tests/app/integrations/: test_wallets.py
tests/infra/db/: test_wallets.py
